<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="10dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tips"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:paddingHorizontal="30dp"
        android:text="@string/tips"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="550dp"
        android:background="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/tips" />

    <Button
        android:id="@+id/small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/small"
        app:icon="@drawable/cup_water__1_"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider"
        app:layout_constraintEnd_toStartOf="@id/medium"/>

    <Button
        android:id="@+id/medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/medium"
        app:icon="@drawable/cup_water__1_"
        app:layout_constraintEnd_toStartOf="@id/large"
        app:layout_constraintStart_toEndOf="@id/small"
        app:layout_constraintTop_toTopOf="@+id/small" />

    <Button
        android:id="@+id/large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/large"
        app:icon="@drawable/cup_water__1_"
        app:layout_constraintStart_toEndOf="@id/medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/small" />

    <TextView
        android:id="@+id/water"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/water"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.30"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/future"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="0ml"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/water"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="500ml"
        tools:ignore="HardcodedText" />

</androidx.constraintlayout.widget.ConstraintLayout>